--- a/Web ropa/index.html
+++ b/Web ropa/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <script
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="style.css" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Tienda de ropa</title>
   </head>
   <body>
@@ -34,6 +35,64 @@
         </ul>
       </nav>
     </header>
-    <section class="nueva-coleccion"><h2 class="nuevacoleccion-title">NUEVAS COLECCIONES</h2></section>
+    <section class="nueva-coleccion">
+      <h2 class="nuevacoleccion-title">NUEVAS COLECCIONES</h2>
+      <div class="grid-clothes">
+        <div class="item">
+          <img src="./img/image-1.jpg" alt="camisa beige" srcset="" />
+          <section class="img-foot">
+            <div class="tipo">Camisa</div>
+            <div class="precio">25.00 €</div>
+          </section>
+        </div>
+        <div class="item">
+          <img src="./img/image-2.jpg" alt="camiseta blanca" srcset="" />
+          <section class="img-foot">
+            <div class="tipo">Camiseta</div>
+            <div class="precio">22.99 €</div>
+          </section>
+        </div>
+        <div class="item">
+          <img src="./img/image-3.jpg" alt="vestido verde" srcset="" />
+          <section class="img-foot">
+            <div class="tipo">Vestido</div>
+            <div class="precio">34.99 €</div>
+          </section>
+        </div>
+        <div class="item">
+          <img
+            src="./img/image-4.jpg"
+            alt="pantalones largos blancos"
+            srcset=""
+          />
+          <section class="img-foot">
+            <div class="tipo">Vaqueros</div>
+            <div class="precio">79.99 €</div>
+          </section>
+        </div>
+        <div class="item">
+          <img src="./img/image-5.jpg" alt="polo marron" srcset="" />
+          <section class="img-foot">
+            <div class="tipo">Polo</div>
+            <div class="precio">44.95 €</div>
+          </section>
+        </div>
+        <div class="item">
+          <img
+            src="./img/image-6.jpg"
+            alt="camisa y pantalon amarillo"
+            srcset=""
+          />
+          <section class="img-foot">
+            <div class="tipo">Conjunto</div>
+            <div class="precio">56.99 €</div>
+          </section>
+        </div>
+      </div>
+    </section>
+
+    <footer></footer>
   </body>
 </html>
+
+
